Move file back so git diff is clearer.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     width=400 
     height=400
   />
-  <script src="./src/mondrian-generator.js"/></script>
+  <script src="./mondrian-generator.js"/></script>
 </body>
 </html>
