Set canvas W x H in 1 place.

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     
     <center>
       <h1>Random Composition in Red, Blue, and Yellow</h1>      
-      <canvas id="compositionCanvas" width="400" height="400"></canvas>
+      <canvas id="compositionCanvas" ></canvas>
       <script type="text/javascript" src="./mondrian-generator.js"></script>
       <br>
       <button class="btn" onclick="clearCanvas(); makeMondrianImg();" href="javascript:void(0);">Generate New</button>
