Mock LeWitt works, with variations.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     />
   </head>
   
-  <body onload="makeArtistImg('Mondrian', true, {variations: 1});">
+  <body onload="makeArtistImg('LeWitt', false, {variations: 2});">
 
     <!-- fork me on github banner -->
     <a href="https://github.com/JEFworks/mondrian-generator">
@@ -24,7 +24,7 @@
 
       <script type="text/javascript" src="./mondrian-generator.js"></script>
       <br>
-      <button class="btn" onclick="clearCanvas(); makeArtistImg('Mondrian', true, {variations: 1});" href="javascript:void(0);">Generate New</button>
+      <button class="btn" onclick="clearCanvas(); makeArtistImg('LeWitt', false, {variations: 2});" href="javascript:void(0);">Generate New</button>
       <a class='btn' id='save' onclick='saveCanvas()'  href="javascript:void(0);">Save Image</a>
     </center>
   </body>
